Fix problem with footer covering about page text

--- a/site/styles/Home.module.css
+++ b/site/styles/Home.module.css
@@ -2,19 +2,18 @@
     margin: auto;
     max-width: 600px;
     padding: 2em 0;
-    margin-bottom: 75px;
 }
 .footer {
   width: 100%;
   height: 75px;
-  position: fixed;
-  bottom: 0px;
+  position: absolute;
   background: white;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 10px;
+  padding: 1em;
 }
 
 .title a {
